testsuite/tests/properties/invalid_lambda_arg_type/then/test.lkt
from common import BaseExampleBlock, Example, FooNode, IndexedItem

class ExampleBlock: BaseExampleBlock {
    @exported fun p(): Array[Int] = node.do((n: Int) => n)
}
